--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" href="/fav.png" type="image/x-icon">
   <meta name="description"
     content="Tu conexión directa con las mejores tiendas en Estados Unidos. En Envios de occidente, hacemos que tus compras lleguen fácilmente a tu puerta. ¡Descubre una nueva forma de disfrutar de productos exclusivos y tendencias globales con nuestros servicios de envío rápido, seguro y confiable!">
+  <meta name="keywords"
+    content="envios de occidente, envios, occidente, envios occidente, envios de occidente leon, envios de occidente nicaragua, rastrear, rastrear envios de occidente, rastrear paquete">
 </head>
 
 <body>
