--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/logo-blue.PNG">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rastrear | Envíos de Occidente</title>
+  <meta name="theme-color" content="#0a165a">
   <link rel="shortcut icon" href="/logo-blue.PNG" type="image/x-icon">
   <meta name="description"
     content="Tu conexión directa con las mejores tiendas en Estados Unidos. En Envios de occidente, hacemos que tus compras lleguen fácilmente a tu puerta. ¡Descubre una nueva forma de disfrutar de productos exclusivos y tendencias globales con nuestros servicios de envío rápido, seguro y confiable!">
